Cut down some css and fixed horizontal scrollbar issue

--- a/src/scss/_pages.scss
+++ b/src/scss/_pages.scss
@@ -3,33 +3,8 @@
 // HOME
 
 // hero
-.hero-image-container {
-  margin-right: -16px;
-  margin-left: -8px;
-}
-
-.hero-image-wrapper {
-  padding-top: 62.5%;
-  height: 100%;
-  display: block;
-  position: relative;
-  width: 100%;
-  height: 0;
-  overflow: hidden;
-}
-
-.hero-image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: object-fit;
-  image-rendering: -webkit-optimize-contrast;
-}
 
 .hero-content {
-  padding-left: 7.5px;
   & .sub-text-hero {
     font-family: function.getFont(secondary);
     font-weight: 500;
